# password-manager

password-manager/: CMakeLists.txt  Dockerfile  README.md  compile_all.sh
password-manager/backend/: main  passwords.db  server
password-manager/backend/include/: common.h  db_manager.h  encryption.h
password-manager/backend/openssl-1.1.1l/: Makefile  configdata.pm  libcrypto.1.1.dylib  libssl.1.1.dylib  pod2htmd.tmp
password-manager/backend/openssl-1.1.1l/apps/: openssl
password-manager/backend/openssl-1.1.1l/crypto/: buildinf.h
password-manager/backend/openssl-1.1.1l/engines/: capi.dylib  dasync.dylib  ossltest.dylib  padlock.dylib
password-manager/backend/openssl-1.1.1l/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
password-manager/backend/openssl-1.1.1l/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  (+161 more)
password-manager/backend/sqlite-autoconf-3410200/: Makefile  config.status  libsqlite3.la  libtool  sqlite3  sqlite3.pc
password-manager/backend/src/: common.cpp  db_manager.cpp  encryption.cpp  main.cpp  server.cpp
password-manager/backend/tests/: test_server.cpp
password-manager/frontend/: .gitignore  package-lock.json
password-manager/frontend/src/: App.js  api.js
(+8 files in other folders)
